Finalisation process attaque

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/risk/Risk.java=UTF-8
 encoding//src/risk/model/Conflit.java=UTF-8
+encoding//src/risk/model/Joueur.java=UTF-8
