--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/risk/Risk.java=UTF-8
 encoding//src/risk/model/Conflit.java=UTF-8
 encoding//src/risk/model/Joueur.java=UTF-8
+encoding//src/risk/test_attaqueMain.java=UTF-8
